// Docs: https://dbml.dbdiagram.io/docs

// =====================
// ENUMS
// =====================
enum event_status {
  registration
  started
  finished
}

enum stage_kind {
  groups
  round_robin
  single_elimination
}

enum stage_status {
  pending
  running
  finished
}

enum match_status {
  pending
  running
  finished
}

enum score_kind {
  points    // actual numeric scores (47-32, 3-1, etc.)
  outcome   // normalized win/lose/draw (1-0, 0-1, 1-1)
}

// =====================
// CORE TABLES
// =====================
Table olympiads {
  id integer [pk]
  name varchar [not null, unique]
  pin varchar(4) [not null]
  version integer [not null, default: 1]
  created_at timestamp
  updated_at timestamp
}

Table events {
  id integer [pk]
  olympiad_id integer [not null, ref: > olympiads.id]
  name varchar [not null]
  status event_status [not null, default: 'registration']
  score_kind score_kind [not null]
  version integer [not null, default: 1]
  created_at timestamp
  updated_at timestamp

  indexes {
    (olympiad_id, name) [unique]
  }
}

Table players {
  id integer [pk]
  olympiad_id integer [not null, ref: > olympiads.id]
  name varchar [not null]
  version integer [not null, default: 1]
  created_at timestamp
  updated_at timestamp

  indexes {
    (olympiad_id, name) [unique]
  }
}

Table teams {
  id integer [pk]
  olympiad_id integer [not null, ref: > olympiads.id]
  name varchar [not null]
  version integer [not null, default: 1]
  created_at timestamp
  updated_at timestamp

  indexes {
    (olympiad_id, name) [unique]
  }
}

Table team_players {
  team_id integer [ref: > teams.id]
  player_id integer [ref: > players.id]
  created_at timestamp

  indexes {
    (team_id, player_id) [pk]
  }
}

Table participants {
  id integer [pk]
  player_id integer [ref: - players.id]
  team_id integer [ref: - teams.id]


  // CONSTRAINT one_participant_type CHECK (
  // (player_id IS NULL AND team_id IS NOT NULL) OR
  // (player_id IS NOT NULL AND team_id IS NULL))
}


// =====================
// TOURNAMENT STRUCTURE
// =====================
Table stage_kinds {
  kind varchar [pk]
  label varchar [not null]

  Note: 'Reference table for stage kinds (groups, round_robin, single_elimination)'
}

Table event_stages {
  id integer [pk]
  event_id integer [not null, ref: > events.id]
  kind varchar [not null, ref: > stage_kinds.kind]
  status stage_status [not null]
  stage_order integer [not null]
  advance_count integer // null for final stage
  version integer [not null, default: 1]
  created_at timestamp
  updated_at timestamp

  indexes {
    (event_id, stage_order) [unique]
  }
}

Table groups {
  id integer [pk]
  event_stage_id integer [not null, ref: > event_stages.id]
  version integer [not null, default: 1]
  created_at timestamp
  updated_at timestamp
}

Table group_participants {
  group_id integer [ref: > groups.id]
  participant_id integer [ref: > participants.id]
  seed integer
  version integer
  created_at timestamp
  updated_at timestamp

  indexes {
    (group_id, participant_id) [pk]
  }
}


// =====================
// MATCHES
// =====================
Table matches {
  id integer [pk]
  group_id integer [not null, ref: > groups.id]
  status match_status [not null, default: 'pending']
  version integer [not null, default: 1]
  created_at timestamp
  updated_at timestamp
}

// NOTE: round and position are computed in the application layer
Table bracket_matches {
  match_id integer [pk, ref: - matches.id]
  next_match_id integer [ref: > matches.id] // null for final match
  version integer [not null, default: 1]
  created_at timestamp
  updated_at timestamp
}

// =====================
// MATCH PARTICIPATION
// =====================
Table match_participants {
  match_id integer [ref: > matches.id]
  participant_id integer [ref: > participants.id]
  created_at timestamp

  indexes {
    (match_id, participant_id) [pk]
  }
}

Table match_participant_scores {
  match_id integer
  participant_id integer
  score integer [not null]
  version integer [not null, default: 1]
  created_at timestamp
  updated_at timestamp

  indexes {
    (match_id, participant_id) [pk]
  }
}

Ref: match_participant_scores.(match_id, participant_id) - match_participants.(match_id, participant_id)